--- a/ToYoDo/WebContent/WEB-INF/nav/sidebarNav.html
+++ b/ToYoDo/WebContent/WEB-INF/nav/sidebarNav.html
@@ -8,13 +8,13 @@
 		<a href="/ToYoDo/JSP/employeeQuote.jsp"> <i class="fas fa-plus"></i><strong
 			class="nav-link d-none d-lg-inline"> Create New Quote</strong></a>
 	</div>
-	<div class="p-2">
+	<!-- <div class="p-2">
 		<a href="" data-toggle="modal" data-target="#viewQuoteModal"> <i
 			class="fas fa-eye"></i><strong class="nav-link d-none d-lg-inline">
 				View Quote</strong></a>
-	</div>
+	</div> -->
 	<div class="p-2">
-		<a href=""> <i class="fas fa-file-import"></i><strong
+		<a href="/ToYoDo/JSP/employeeImportProducts.jsp"> <i class="fas fa-file-import"></i><strong
 			class="nav-link d-none d-lg-inline"> Import Products</strong></a>
 	</div>
 </div>
