Only formatting introduced to ensure coding standards are kept up.

--- a/ToYoDo/WebContent/WEB-INF/nav/sidebarNav.html
+++ b/ToYoDo/WebContent/WEB-INF/nav/sidebarNav.html
@@ -14,7 +14,8 @@
 				View Quote</strong></a>
 	</div> -->
 	<div class="p-2">
-		<a href="/ToYoDo/JSP/employeeImportProducts.jsp"> <i class="fas fa-file-import"></i><strong
+		<a href="/ToYoDo/JSP/employeeImportProducts.jsp"> <i
+			class="fas fa-file-import"></i><strong
 			class="nav-link d-none d-lg-inline"> Import Products</strong></a>
 	</div>
 </div>
