--- a/ToYoDo/WebContent/WEB-INF/nav/indexNav.html
+++ b/ToYoDo/WebContent/WEB-INF/nav/indexNav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-info text-white">
 	<a class="navbar-brand" href="/ToYoDo/JSP/index.jsp">ToYoDo</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarSupportedContent"
@@ -7,9 +7,9 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	<div class="collapse navbar-collapse" id="navbarSupportedContent" > 
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+			<li class="nav-item"><a class="nav-link" href="/ToYoDo/JSP/about.jsp">About</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">Discover</a></li>
 			<li class="nav-item dropdown"><a
 				class="nav-link dropdown-toggle" href="#"
